# short-searcher

./: README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-30-short-searcher-phase1.md
docs/superpowers/specs/: 2026-05-30-short-searcher-phase1-design.md
short_searcher/: cli.py  coins.py  metrics.py  models.py  render.py  reports.py  sources.py  store.py
tests/: conftest.py  test_cli.py  test_coins.py  test_metrics.py  test_models.py  test_render.py  test_reports.py  test_smoke.py  test_sources.py  test_store.py
tests/fixtures/: ytdlp_video.json
