[project]
name = "short-searcher"
version = "0.1.0"
description = "Research assistant for crypto YouTube Shorts"
requires-python = ">=3.11"
dependencies = ["tubescrape>=0.1.2", "yt-dlp>=2025.0", "rich>=13.0"]

[project.scripts]
short-searcher = "short_searcher.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
